fixed width of divs /media queries/realigned main divs

--- a/explore.css
+++ b/explore.css
@@ -1,5 +1,7 @@
 body{
   display:flex;
+  width:100%;
+  height:100%;
   margin:0 auto;
   justify-content: center;
   background:url("https://i.imgur.com/PsA22oK.jpg");
@@ -14,8 +16,8 @@ header {
   height:150px;
   opacity:0.8;
   width:100%;
-  min-width:650px;
-  max-width: 1440px;
+  /* min-width:650px;
+  max-width: 1440px; */
  }
 #title{
   margin-top:0 auto;
@@ -36,18 +38,19 @@ header {
 
 div{
   display: inline-block;
-  margin-top:50px;; 
-  margin-left:15%;
+  margin-top:50px;
+  margin-left:auto;
+  margin-right:auto;
   opacity: 0.9; 
-  width:60%;
-  display:flex;
   width:50%;
-  /* justify-content: space-evenly;  */
-  flex-direction:row;
-  min-width:650px;
+  display:flex;
+  justify-content: space-evenly; 
+  max-width:650px;
 }
 #book-section{
-  
+  margin-left:auto;
+  margin-top:auto;
+  flex-direction: column;
   background-color:white;
   border-right-color: blue;
   border-right-style: solid;
@@ -55,9 +58,9 @@ div{
   border-left-style: solid;
 }
 img{
-
-  margin-left:20px;
-  margin-top:20px;
+ overflow: hidden;
+  margin-left:auto;
+  margin-top:auto;
 
 }
 img:hover{
@@ -65,10 +68,7 @@ img:hover{
 -ms-transform: scale(0.8);
 transform: scale(0.8);
 }
-/* 
-.book-divs{
- 
-} */
+
 footer small{
   display: inline-block;
   width:100%;
@@ -80,8 +80,45 @@ footer small{
 
 @media only screen 
   and (min-device-width: 375px) 
-  and (max-device-width: 667px) 
+  and (max-device-width: 666px) 
   and (-webkit-min-device-pixel-ratio: 2) { 
+ 
+    div{
+      display: inline-block;
+      margin-top:50px;
+      margin-left:auto;
+      margin-right:auto;
+      opacity: 0.9; 
+      width:50%;
+      display:flex;
+      justify-content: space-evenly; 
+      max-width:650px;
+    }
+    #book-section{
+      margin-left:auto;
+      margin-top:auto;
+      flex-direction: column;
+      background-color:white;
+      border-right-color: blue;
+      border-right-style: solid;
+      border-left-color: blue;
+      border-left-style: solid;
+    }
+
+
+    img{
+      width:100%;
+      overflow: hidden;
+       margin-left:auto;
+       margin-top:auto;
+     
+     }
+     img:hover{
+     -webkit-transform: scale(0.8);
+     -ms-transform: scale(0.8);
+     transform: scale(0.8);
+     }    
+
 
 }
 
