--- a/style.css
+++ b/style.css
@@ -41,31 +41,33 @@ header {
 }
 
 #generate-quote-button{
-  margin-top:20px;
+  margin-top: auto;
+  margin-left: auto;
+  margin-right: auto;
   width:5%;
-  margin-left:25%;
-  background: linear-gradient(0deg, rgba(77,1,113,0.7777485994397759) 0%, rgba(31,43,161,1) 100%);
   text-align:center;
   border-radius: 5%;
   color:white;
   font-size:16px;
- 
+  background: linear-gradient(0deg, rgba(77,1,113,0.7777485994397759) 0%, rgba(31,43,161,1) 100%);
+
 }
-#quote-content{
+#quotes-div{
 
   margin-top:180px;
   display:flex;
   align-items: baseline;
   flex-direction:column;
   width:40%;
-  margin-left:10%;
-  min-height:200px;
+  margin-right:auto;
+  margin-left:auto;
   background-color:white;
   border-right-color: blue;
   border-right-style: solid;
   border-left-color: blue;
   border-left-style: solid;
-  min-width:350;
+  min-width:400px;
+  min-height:150px;
 }
 
 #display-author{
@@ -75,7 +77,8 @@ font-size:20px;
 margin-top:10px;
 text-align:center;
 width:40%;
-margin-left:30%;
+margin-left:auto;
+margin-right: auto;
 }
 #display-quote{
 color:purple;
@@ -87,7 +90,7 @@ margin-left:30%;
 
 }
 h2{
-  color:purple;
+  color:rgb(90, 43, 199);
   font-size:18px;
   text-align:center; 
 }
@@ -101,15 +104,19 @@ a{
   text-decoration:none;
 }
 
-main{
-  margin-left:52%;
-  text-align:left;
+#links{
+  margin-top:20px;
+  margin-right: auto;
+  margin-left:auto;
+  text-align:center;
   background-color:white;
   width: 40%; 
-    border-right-color: blue;
-    border-right-style: solid;
-    border-left-color: blue;
-    border-left-style: solid;
+  border-right-color: blue;
+  border-right-style: solid;
+  border-left-color: blue;
+  border-left-style: solid;
+  min-width:400px;
+  min-height:150px;
 }
 
 footer small{
@@ -128,7 +135,17 @@ footer small{
   and (max-device-width: 667px) 
   and (-webkit-min-device-pixel-ratio: 2) { 
 
-  header 
+    #quote-content{
+
+      margin-top:180px;
+      display:flex;
+      align-items: baseline;
+      flex-direction:column;
+      width:40%;
+      margin-left:10%;
+      min-width:400px;
+      min-height:150px;
+    }
 }
 
 /* Portrait */
